@@ -2,10 +2,11 @@ Changes in 21.7
 ===============
 	* Upgraded SELinux code to new api, thanks to Chris PeBenito
 	* define rpmatch for libraries that dont have it
-	* Fixed small typos in help thanks to Benno Schulenberg
+	* Fixed small typos in help, thanks to Benno Schulenberg
 	  fixes SF# 1150042
 	* fusernew - this will be the new fuser once it gets tested on
 	  those strange setups folks out there have
+	* Completed change from Flask to SELinux, thanks to Benno Schulenberg
 
 Changes in 21.6
 ===============
@@ -29,6 +30,7 @@ Changes in 21.6
 	* Fixed --enable-flask logic SF#1094205
 	* Added Norwegian Bokmaal translation
 	* Fixed groff madness with fuser(1) Debian #298199
+	* Added Dutch translation
 
 Changes in 21.5
 ===============
